Mejorando la exposicion de la data y Transfiriendo data seleccionada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".OpcionesDeActividad"/>
+        <activity android:name=".TourDetalleActividad"/>
     </application>
 
 </manifest>
